make_flib11_clang++.log
mkdir -p ../libLinux/static/Graphics
mkdir -p ../libLinux/static/System
mkdir -p ../libLinux/static/Window
mkdir -p ../libLinux/static/GL
mkdir -p ../libLinux/static/Gui
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Mesh.cpp -o ../libLinux/static/Graphics/Mesh.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/VertexArray.cpp -o ../libLinux/static/Graphics/VertexArray.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FloatTexture.cpp -o ../libLinux/static/Graphics/FloatTexture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/TimeQuery.cpp -o ../libLinux/static/Graphics/TimeQuery.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Color.cpp -o ../libLinux/static/Graphics/Color.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Image.cpp -o ../libLinux/static/Graphics/Image.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FontRenderer.cpp -o ../libLinux/static/Graphics/FontRenderer.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/IndexHolder.cpp -o ../libLinux/static/Graphics/IndexHolder.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/DrawCall.cpp -o ../libLinux/static/Graphics/DrawCall.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/ShaderSource.cpp -o ../libLinux/static/Graphics/ShaderSource.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Metrics.cpp -o ../libLinux/static/Graphics/Metrics.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/RenderStates.cpp -o ../libLinux/static/Graphics/RenderStates.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/SpriteManager.cpp -o ../libLinux/static/Graphics/SpriteManager.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/TextureConvolution.cpp -o ../libLinux/static/Graphics/TextureConvolution.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FloatAttributeUpdater.cpp -o ../libLinux/static/Graphics/FloatAttributeUpdater.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FrameBuffer.cpp -o ../libLinux/static/Graphics/FrameBuffer.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Texture.cpp -o ../libLinux/static/Graphics/Texture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Attribute.cpp -o ../libLinux/static/Graphics/Attribute.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Transformable.cpp -o ../libLinux/static/Graphics/Transformable.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/DepthTexture.cpp -o ../libLinux/static/Graphics/DepthTexture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Shader.cpp -o ../libLinux/static/Graphics/Shader.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/ShaderManager.cpp -o ../libLinux/static/Graphics/ShaderManager.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Drawable.cpp -o ../libLinux/static/Graphics/Drawable.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/DrawData.cpp -o ../libLinux/static/Graphics/DrawData.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Font.cpp -o ../libLinux/static/Graphics/Font.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Glyph.cpp -o ../libLinux/static/Graphics/Glyph.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/AssocPoint.cpp -o ../libLinux/static/Graphics/AssocPoint.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/ComputeShader.cpp -o ../libLinux/static/Graphics/ComputeShader.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/CubeTexture.cpp -o ../libLinux/static/Graphics/CubeTexture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Buffer.cpp -o ../libLinux/static/Graphics/Buffer.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/GlObject.cpp -o ../libLinux/static/Graphics/GlObject.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/TextureAtlas.cpp -o ../libLinux/static/Graphics/TextureAtlas.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/Quaternion.cpp -o ../libLinux/static/System/Quaternion.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/Time.cpp -o ../libLinux/static/System/Time.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/Camera.cpp -o ../libLinux/static/System/Camera.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/Result.cpp -o ../libLinux/static/System/Result.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/Sleep.cpp -o ../libLinux/static/System/Sleep.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/String.cpp -o ../libLinux/static/System/String.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/Clock.cpp -o ../libLinux/static/System/Clock.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c System/CmdArgs.cpp -o ../libLinux/static/System/CmdArgs.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Window/GLContext.cpp -o ../libLinux/static/Window/GLContext.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Window/Event.cpp -o ../libLinux/static/Window/Event.o 
In file included from Window/Event.cpp:19:
../include/FRONTIER/Window/Event.hpp:171:14: error: no type named 'vec3i' in namespace 'fm'
                static fm::vec3i keyToDelta(Key key,bool allowWASD = true,bool allowArrows = true,bool allowShiftSpace = true);
                       ~~~~^
1 error generated.
makefile:52: recipe for target '../libLinux/static/Window/Event.o' failed
make: *** [../libLinux/static/Window/Event.o] Error 1
make: *** Waiting for unfinished jobs....
